==> apache/nuttx/arch/arm/src/lpc31xx/lpc31_serial.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <unistd.h>
#include <semaphore.h>
#include <string.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/serial/serial.h>
#include <arch/serial.h>
#include "up_arch.h"
#include "up_internal.h"
#include "lpc31_cgudrvr.h"
#include "lpc31_uart.h"

static int up_setup(struct uart_dev_s *dev)
{
#ifndef CONFIG_SUPPRESS_UART_CONFIG
  struct up_dev_s *priv = (struct up_dev_s*)dev->priv;
  uint32_t regval;

  /* Clear fifos */

  putreg32((UART_FCR_RXFIFORST|UART_FCR_TXFIFORST), LPC31_UART_FCR);

  /* Set trigger */

  putreg32((UART_FCR_FIFOENABLE|UART_FCR_RXTRIGLEVEL_16), LPC31_UART_FCR);

  /* Set up the IER */

  priv->ier = getreg32(LPC31_UART_IER);

  /* Set up the LCR */

  regval = 0;

#if CONFIG_UART_BITS == 5
  regval |= UART_LCR_WDLENSEL_5BITS;
#elif CONFIG_UART_BITS == 6
  regval |= UART_LCR_WDLENSEL_6BITS;
#elif CONFIG_UART_BITS == 7
  regval |= UART_LCR_WDLENSEL_7BITS;
#else
  regval |= UART_LCR_WDLENSEL_8BITS;
#endif

#if CONFIG_UART_2STOP > 0
  regval |= UART_LCR_NSTOPBITS;
#endif

#if CONFIG_UART_PARITY == 1
  regval |= UART_LCR_PAREN;
#elif CONFIG_UART_PARITY == 2
  regval |= (UART_LCR_PAREVEN|UART_LCR_PAREN);
#endif
  putreg32(regval, LPC31_UART_LCR);

  /* Set the BAUD divisor */

  up_configbaud();

  /* Configure the FIFOs */

  putreg32((UART_FCR_RXTRIGLEVEL_16|UART_FCR_TXFIFORST|
            UART_FCR_RXFIFORST|UART_FCR_FIFOENABLE),
           LPC31_UART_FCR);

  /* The NuttX serial driver waits for the first THRE interrupt before
   * sending serial data... However, it appears that the lpc313x hardware
   * does not generate that interrupt until a transition from not-empty
   * to empty.  So, the current kludge here is to send one NULL at
   * startup to kick things off.
   */

  putreg32('\0', LPC31_UART_THR);
#endif
  return OK;
}

static int up_attach(struct uart_dev_s *dev)
{
  int ret;

  /* Attach and enable the IRQ */

  ret = irq_attach(LPC31_IRQ_UART, up_interrupt);
  if (ret == OK)
    {
       /* Enable the interrupt (RX and TX interrupts are still disabled
        * in the UART
        */

       up_enable_irq(LPC31_IRQ_UART);
    }
  return ret;
}

static int up_ioctl(struct file *filep, int cmd, unsigned long arg)
{
#ifdef CONFIG_SERIAL_TIOCSERGSTRUCT
  struct inode      *inode = filep->f_inode;
  struct uart_dev_s *dev   = inode->i_private;
#endif
  int                ret   = OK;

  switch (cmd)
    {
#ifdef CONFIG_SERIAL_TIOCSERGSTRUCT
    case TIOCSERGSTRUCT:
      {
         struct up_dev_s *user = (struct up_dev_s*)arg;
         if (!user)
           {
             ret = -EINVAL;
           }
         else
           {
             memcpy(user, dev, sizeof(struct up_dev_s));
           }
       }
       break;
#endif

    case TIOCSBRK:  /* BSD compatibility: Turn break on, unconditionally */
      {
        irqstate_t flags = irqsave();
        up_enablebreaks();
        irqrestore(flags);
      }
      break;

    case TIOCCBRK:  /* BSD compatibility: Turn break off, unconditionally */
      {
        irqstate_t flags;
        flags = irqsave();
        up_disablebreaks();
        irqrestore(flags);
      }
      break;

    default:
      errno = ENOTTY;
      ret = ERROR;
      break;
    }

  return ret;
}

static int up_receive(struct uart_dev_s *dev, uint32_t *status)
{
  uint32_t rbr;

  *status = getreg32(LPC31_UART_LSR);
  rbr     = getreg32(LPC31_UART_RBR);
  return rbr & 0xff;
}

static void up_rxint(struct uart_dev_s *dev, bool enable)
{
  struct up_dev_s *priv = (struct up_dev_s*)dev->priv;
  if (enable)
    {
#ifndef CONFIG_SUPPRESS_SERIAL_INTS
      priv->ier |= UART_IER_RDAINTEN;
#endif
    }
  else
    {
      priv->ier &= ~UART_IER_RDAINTEN;
    }
  putreg32(priv->ier, LPC31_UART_IER);
}

static bool up_rxavailable(struct uart_dev_s *dev)
{
  return ((getreg32(LPC31_UART_LSR) & UART_LSR_RDR) != 0);
}

static void up_txint(struct uart_dev_s *dev, bool enable)
{
  struct up_dev_s *priv = (struct up_dev_s*)dev->priv;
  if (enable)
    {
#ifndef CONFIG_SUPPRESS_SERIAL_INTS
      priv->ier |= UART_IER_THREINTEN;
#endif
    }
  else
    {
      priv->ier &= ~UART_IER_THREINTEN;
    }
  putreg32(priv->ier, LPC31_UART_IER);
}

static bool up_txready(struct uart_dev_s *dev)
{
  return ((getreg32(LPC31_UART_LSR) & UART_LSR_THRE) != 0);
}

void up_serialinit(void)
{
#if defined(CONFIG_UART_SERIAL_CONSOLE)
  (void)uart_register("/dev/console", &g_uartport);
#endif
  (void)uart_register("/dev/ttyS0", &g_uartport);
}

int up_putc(int ch)
{
  struct up_dev_s *priv = &g_uartpriv;
  uint8_t ier;

  /* Keep UART interrupts disabled so that we do not interfere with the
   * serial driver.
   */

  up_disableuartint(priv, &ier);

  /* Check for LF */

  if (ch == '\n')
    {
      /* Add CR */

      up_lowputc('\r');
    }

  /* Output the character */

  up_lowputc(ch);
  up_restoreuartint(priv, ier);
  return ch;
}

int up_putc(int ch)
{
  /* Check for LF */

  if (ch == '\n')
    {
      /* Add CR */

      up_lowputc('\r');
    }

  /* Output the character */

  up_lowputc(ch);
  return ch;
}
